force-app/main/default/objects/Account/fields/BillingLatitude__c.field-meta.xml
<CustomField>
    <fullName>BillingLatitude__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Latitude</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>