force-app/main/default/objects/Account/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Used for zone-level hierarchy rollups.</inlineHelpText>
    <label>Region Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>