force-app/main/default/objects/Account/recordTypes/Competitor_Outlet.recordType-meta.xml
<RecordType>
    <fullName>Competitor_Outlet</fullName>
    <active>true</active>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Competitor Outlet</label>
</RecordType>