force-app/main/default/objects/Account/recordTypes/Retail_Location.recordType-meta.xml
<RecordType>
    <fullName>Retail_Location</fullName>
    <active>true</active>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Retail Location</label>
</RecordType>